--- a/index.html
+++ b/index.html
@@ -4934,14 +4934,17 @@
            </tr>
         </table>
     </div>
-    <div id="color-picker">
-        <div id='red' class="color"></div>
-        <div id="orange"class="color"></div>
-        <div id="yellow"class="color"></div>
-        <div id="green"class="color"></div>
-        <div id="cyan"class="color"></div>
-        <div id="blue"class="color"></div>
-        <div id="violet"class="color"></div>
+    <div class="row" id="color-picker">
+        <div class="row" id="palete">
+                <div id='red' class="color" value="red"></div>
+                <div id="orange"class="color"></div>
+                <div id="yellow"class="color"></div>
+                <div id="green"class="color"></div>
+                <div id="cyan"class="color"></div>
+                <div id="blue"class="color"></div>
+                <div id="violet"class="color"></div>
+                <div id="white" class="color"></div>
+        </div>        
         <span>Color picked => </span>
         <div id="picked-color"></div>
     </div>
