--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
     
 </head>
-<body>    
+<body>
+    <div class="save-load-buttons">
+        <div id="save-button">
+            <button id="save">Save</button>
+            <div id="save-tip">Clik to save your picture</div>
+        </div>
+        <div id="load-button">
+            <button id="load">Load</button>
+            <div id="load-tip">Clik to load your saved picture</div>
+        </div>        
+    </div>      
     <div id="container">
         <div id="pane">
             <div class="row">
